Bug 498722 - nsIFaviconService.getFaviconLinkForIcon error on null argument (r=dietrich) CLOSED TREE