toolkit/components/places/tests/unit/test_null_interfaces.js
@@ -57,7 +57,9 @@ let testServices = [
     ["createFolder", "getItemIdForGUID"]],
   ["browser/livemark-service;2","nsILivemarkService", []],
   ["browser/annotation-service;1","nsIAnnotationService", []],
-  ["browser/favicon-service;1","nsIFaviconService", []],
+  ["browser/favicon-service;1","nsIFaviconService",
+    ["getFaviconLinkForIcon", "addFailedFavicon", "removeFailedFavicon",
+     "isFailedFavicon"]],
   ["browser/tagging-service;1","nsITaggingService", []],
 ];
 _(testServices.join("\n"));
